Implement SourceAFIS matching