@@ -8,6 +8,7 @@ import static org.junit.Assert.fail;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+
 import yhames.pro.project.afis.matchers.*;
 
 /**
@@ -16,45 +17,26 @@ import yhames.pro.project.afis.matchers.*;
 public class AppTest 
 {
     private Path fileName; 
-    private String fp; 
+    private Fingerprint fp; 
 
     public AppTest() {
         try {
-           fileName = Path.of("/Users/james/ownCloud/University/Masters/Project/Code/Stable/Server/resources/fingerprints/LeftIndex.b64");  
-           fp = Files.readString(fileName);
+           fileName = Path.of("/Users/james/ownCloud/University/Masters/Project/Code/Stable/Server/resources/fingerprints/LeftIndex.bmp");  
+           fp = new Fingerprint(Files.readAllBytes(fileName));
         }
         catch (IOException e) {
-            System.err.println("Unable to find the reference b64 img");
+            System.err.println("Unable to find the reference image");
             fail();
         }
-    }
-
-    @Test
-    public void testBase64Decode() {
-        try {
-            byte[] expected = Files.readAllBytes(Path.of("/Users/james/ownCloud/University/Masters/Project/Code/Stable/Server/resources/fingerprints/LeftIndex.bmp"));
-            byte[] actual = Base64Decoder.decode(fp);
-
-            Assert.assertEquals(expected, actual);
-        }
-        catch (IOException e) {
-            System.err.println("Unable to find the reference b64 img");
-            fail();
-        }   
     }
 
     @Test
     public void testDatabaseDownload() {
         DatabaseConnection db = new DatabaseConnection();
 
-        try {
-            byte[] actual = Files.readAllBytes(Path.of("/Users/james/ownCloud/University/Masters/Project/Code/Stable/Server/resources/fingerprints/LeftIndex.bmp"));
-            Assert.assertArrayEquals(db.getFingerprints()[0].getImg(), actual);
-        }
-        catch (IOException e) {
-            fail();
-        }
-        
+        byte[] expected = fp.getImg();
+        byte[] actual = db.getFingerprints()[0].getImg();
+        Assert.assertArrayEquals(actual, expected);
     }
 
     @Test
@@ -63,17 +45,27 @@ public class AppTest
         are detected as such
     */
     public void testMatchingMatch() {
-       // Assert.assertTrue(new SourceAFIS().match(fp));
-       Assert.assertTrue(false);
+       Match match = new SourceAFIS().search(fp, new Fingerprint[] {fp});
+
+       System.out.println("Match Score: " + match.getScore());
+
+       Assert.assertTrue(match.isMatch());
     }
 
-
+    @Test
+    /*
+        Tests the enrolling of new fingerprints
+    */
+    public void testEnroll() {
+        boolean result = new DatabaseConnection().enroll(fp);
+        Assert.assertTrue(result);
+    }
     /*
         Test is 2 images which should NOT be a match
         are detected as such
     */
     @Test
     public void testMatchingNoMatch() {
-        Assert.assertTrue(false);
+        fail();
     }
 }
